Fix padding on flipping cards to prevent extra space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,7 +320,6 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    padding-top: 40px;
     text-align: justify;
     -webkit-transition: -webkit-transform 0.6s;
     transition: -webkit-transform 0.6s;
